# daas-compiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  VERSIONING.md  claude_hook_prompt.sh  release.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
docs/: agent-design.md
docs/superpowers/plans/: 2026-05-18-daas-compiler-stage-redesign.md  2026-05-19-daas-governance.md  2026-05-19-fix-sopa-filter-fallbacks.md  2026-05-19-gene-order-viz-improvements.md  2026-05-19-he2st-task-adapter.md
docs/superpowers/specs/: 2026-05-18-daas-compiler-stage-redesign.md  2026-05-19-daas-governance-design.md
skills/daas-compiler/: SKILL.md  pyproject.toml  requirements-preprocess.txt  requirements.txt  usage-guide.md
skills/daas-compiler/daas/: __init__.py  cli_args.py  dataset.py  filtering.py  genes.py  planning.py  reports.py  splits.py  viz.py
skills/daas-compiler/daas/filters/: nucleus_overlap.py  nucleus_presence.py  tissue.py
skills/daas-compiler/daas/loaders/: configs.py
skills/daas-compiler/examples/: mini_pipeline_test.py  wds_only_example.py
skills/daas-compiler/references/: agent-contract.md  artifact-levels.md  dependency-policy.md  filtering-recipes.md  filtering.md  sopa-integration.md  table-key-contract.md  task-adapters.md  training-ready-contract.md  workflow-planning.md
skills/daas-compiler/scripts/: compile_dataset.py  extract_all.py  extract_sample.py  filter_nucleus_overlap.py  filter_nucleus_presence.py  filter_tissue.py  inspect_spatialdata.py  viz_sample.py
skills/daas-compiler/tests/: conftest.py  test_agent_contract.py  test_bundle.py  test_compile.py  test_dataset.py  test_filter_nucleus_overlap.py  test_filter_nucleus_presence.py  test_filter_tissue.py  test_filtering.py  test_filtering_integration.py  test_genes.py  test_he2st_task.py  test_inspect.py  test_lru_mmap.py  test_planning.py  test_reports.py  test_splits.py  test_viz.py
