[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daas-compiler"
version = "0.6.3"
description = "Cell-centered HE patch dataset compiler"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "qizou97" }]
dependencies = [
  "anndata>=0.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "Pillow>=10",
  "pyarrow>=15",
]

[project.optional-dependencies]
extract = [
  "spatialdata>=0.7",
  "wsidata>=0.9",
  "lazyslide>=0.10",
  "matplotlib>=3.8",
]
wds = [
  "webdataset>=0.2",
]
test = [
  "pytest>=7",
  # daas.filtering integration tests build a small in-memory SpatialData
  # stand-in using geopandas + shapely. They do NOT require the heavyweight
  # extract group (wsidata / lazyslide / matplotlib) — CLI-parser tests use
  # the lightweight daas.cli_args module that does not import those deps.
  "geopandas>=0.14",
  "shapely>=2.0",
]
preprocess = [
  "sopa",
  "geopandas>=0.14",
  "shapely>=2.0",
  "scikit-image",
]
tasks = [
  "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["daas*"]
exclude = ["tests*", "scripts*", "examples*"]
